# aureate

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  main.rs  models.rs  threads.rs
src/models/: assets.rs  error.rs  mod.rs
