[package]
name = "aureate"
version = "0.2.0"
authors = ["Bazaah <github@luxolus.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.39", features = ["preserve_order"] }
serde_yaml = "0.8.9"
csv = "1.0.7"
simplelog = "^0.5.0"
log = "^0.4.0"
